@@ -16,7 +16,9 @@
     <properties>
         <surefire.args>
             -XX:+IgnoreUnrecognizedVMOptions
-            --ass-opens=java.base/java.lang=ALL-UNNAMED
+            --add-opens=java.base/java.lang=ALL-UNNAMED
+            --add-opens=org.mule.runtime.api/org.mule.runtime.api.lifecycle=ALL-UNNAMED
+            --add-opens=org.mule.runtime.core/org.mule.runtime.core.api.processor=ALL-UNNAMED
             --add-opens=org.mule.runtime.core/org.mule.runtime.core.internal.config=ALL-UNNAMED
             --add-opens=org.mule.runtime.core/org.mule.runtime.core.internal.config.builders=ALL-UNNAMED
             --add-opens=org.mule.runtime.core/org.mule.runtime.core.internal.context=ALL-UNNAMED
@@ -27,9 +29,11 @@
             --add-opens=org.mule.runtime.core/org.mule.runtime.core.internal.registry=ALL-UNNAMED
             --add-opens=org.mule.runtime.core/org.mule.runtime.core.internal.serialization=ALL-UNNAMED
             --add-opens=org.mule.runtime.core/org.mule.runtime.core.internal.util.store=ALL-UNNAMED
+            --add-opens=org.mule.runtime.core/org.mule.runtime.core.privileged.component=ALL-UNNAMED
+            --add-opens=org.mule.runtime.core/org.mule.runtime.core.privileged.exception=ALL-UNNAMED
+            --add-opens=org.mule.runtime.core/org.mule.runtime.core.privileged.processor.chain=ALL-UNNAMED
             --add-opens=org.mule.runtime.core/org.mule.runtime.core.privileged.processor.simple=ALL-UNNAMED
             --add-opens=org.mule.runtime.extension.model/org.mule.runtime.config.internal.error=ALL-UNNAMED
-            ${surefire.args.base}
             ${surefire.test.unit.open.args}
         </surefire.args>
         <javaModuleName>org.mule.runtime.core.components</javaModuleName>
